Fix Interstitial for Posts on Mobile

--- a/src/assets/scss/templates/_single.scss
+++ b/src/assets/scss/templates/_single.scss
@@ -4,7 +4,9 @@
 	
 		.interstitial {
 
-			margin-top: -6rem;
+			@include breakpoint( medium ) {
+				margin-top: -6rem;
+			}
 
 		}
 		
